2000-07-07  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* hashtab.c (scm_hash_fn_create_handle_x):  Signal an error if the
	given hash table has no slots.

2000-07-06  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (policy_on_error):  Added in order to allow alloc_some_heap
	to react to malloc failures in a context dependent way.

	(scm_check_freelist):  No need to flush streams before abort().

	(scm_gc_for_newcell):  Try to allocate new memory in three phases:
	grow heap if preferred, if still no memory available collect
	garbage, if still no memory available grow heap.

	(heap_segment_table_size):  Added to always reflect the actual
	size of the heap segment table, because scm_n_heap_segs may differ
	from the heap segment table size.

	(alloc_some_heap):  In case of malloc failure, react according to
	the new policy_on_error parameter (either return to caller or
	abort immediately).  Further, keep heap_segment_table_size up to
	date.

	(scm_init_storage):  Initialize heap_segment_table_size.

2000-07-06  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gh.h:  Don't include <stdio.h>.  Thanks to Han-Wen Nienhuys for
	the hint.

2000-06-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h (SCM_OUTOFRANGE, SCM_NALLOC, SCM_HUP_SIGNAL,
	SCM_INT_SIGNAL, SCM_FPE_SIGNAL, SCM_BUS_SIGNAL, SCM_SEGV_SIGNAL,
	SCM_ALRM_SIGNAL, SCM_GC_SIGNAL, SCM_TICK_SIGNAL, SCM_SIG_ORD,
	SCM_ORD_SIG, SCM_NUM_SIGS):  Re-introduce these as deprecated
	symbols.

	* error.c (scm_wta):  Re-introduce dispatching for SCM_OUTOFRANGE
	and SCM_NALLOC, but as a deprecated feature.

2000-06-30  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* debug.c: Added #include fluids.h.

	* numbers.c (scm_gr_p, scm_leq_p, scm_geq_p): Turned into
	primitive generics.  (Thanks to Nicolas Neuss.)

2000-06-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (alloc_some_heap):  Use scm_memory_error to indicate a
	failed attempt to get additional memory from the system.

	(scm_gc_for_newcell):  Changed the control structure to make the